[gd_scene load_steps=6 format=2]

[ext_resource path="res://menus/game_over_menu/ingame_menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/ubuntu/Ubuntu-B.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.156863, 0.384314, 0.470588, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.054902, 0.2, 0.254902, 1 )

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="ingame_menu" type="CenterContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" type="Panel" parent="."]
margin_left = 312.0
margin_top = 200.0
margin_right = 712.0
margin_bottom = 400.0
rect_min_size = Vector2( 400, 200 )
custom_styles/panel = SubResource( 3 )

[node name="margin_container" type="MarginContainer" parent="panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox_container" type="VBoxContainer" parent="panel/margin_container"]
margin_left = 10.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 190.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title_label" type="Label" parent="panel/margin_container/vbox_container"]
margin_right = 380.0
margin_bottom = 151.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"
align = 1
valign = 1

[node name="restart_button" type="Button" parent="panel/margin_container/vbox_container"]
margin_top = 155.0
margin_right = 380.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 2 )
text = "Empezar de nuevo"
[connection signal="pressed" from="panel/margin_container/vbox_container/restart_button" to="." method="_on_restart_button_pressed"]
